Добавление страницы "О проекте"

--- a/site/index.html
+++ b/site/index.html
@@ -18,13 +18,13 @@
       <header>
         <div class="container">
           <div class="header">
-            <a href="#l" class="header__logo">
+            <a href="/site/index.html" class="header__logo">
               <img src="/site/images/Moscow-politech.svg" alt="logo" />
             </a>
             <div class="header__nav">
               <nav class="nav">
-                <a href="#" class="nav__link">Главная</a>
-                <a href="#" class="nav__link">О проекте</a>
+                <a href="/site/index.html" class="nav__link">Главная</a>
+                <a href="/site/about.html" class="nav__link">О проекте</a>
                 <a href="#" class="nav__link">Участники</a>
                 <a href="#" class="nav__link">Журнал</a>
                 <a href="#" class="nav__link">Ресурсы</a>
@@ -47,7 +47,7 @@
               241-338 <br />В рамках проектной деятельности «ИТ-сервисы для
               «Цифрового университета» (I курс)»
             </p>
-            <a href="#" class="btn">О проекте</a>
+            <a href="/site/about.html" class="btn">О проекте</a>
           </div>
           <div class="main__cover">
             <img src="/site/images/1.png" alt="phone" />
@@ -59,7 +59,7 @@
       <footer>
         <div class="container">
           <div class="header">
-            <a href="#" class="header__logo">
+            <a href="/site/index.html" class="header__logo">
               <img src="/site/images/Moscow-politech.svg" alt="logo" />
             </a>
             <p class="contacts">
