Добавление страницы "Участники"

--- a/site/about.html
+++ b/site/about.html
@@ -25,7 +25,7 @@
               <nav class="nav">
                 <a href="/site/index.html" class="nav__link">Главная</a>
                 <a href="/site/about.html" class="nav__link">О проекте</a>
-                <a href="#" class="nav__link">Участники</a>
+                <a href="/site/team.html" class="nav__link">Участники</a>
                 <a href="#" class="nav__link">Журнал</a>
                 <a href="#" class="nav__link">Ресурсы</a>
               </nav>
