--- a/site/team.html
+++ b/site/team.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Главная</title>
+    <title>Участники</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,19 +38,25 @@
       <div class="container">
         <div class="main">
           <div class="main__text">
-            <p class="text main__desk light">#Главная</p>
-            <h1 class="title-h1 main__title">
-              Разработка IOS приложения для Университета
-            </h1>
+            <p class="text main__desk light">#Участники</p>
+            <h1 class="title-h1 main__title">Наша команда</h1>
             <p class="text main__desk">
-              Выполнила: <br />Вольская Елизавета Сергеевна <br />Группа:
-              241-338 <br />В рамках проектной деятельности «ИТ-сервисы для
-              «Цифрового университета» (I курс)»
+              Деген Светислав Владимирович <span class="light">#TeamLead</span
+              ><br /><br />Белый Данила Юрьевич
+              <span class="light">#Developer</span> <br /><br />Щеблыкин
+              Константин Евгеньевич <span class="light">#Developer</span>
+              <br /><br />Грачев Иван Павлович
+              <span class="light">#Developer</span> <br /><br />Муравьев Савелий
+              Сергеевич <span class="light">#Developer</span>
+              <br /><br />Вольская Елизавета Сергеевна
+              <span class="light">#Designer</span> <br /><br />Мирзоева Камилла
+              Джунайдуллоевна <span class="light">#Designer</span>
+              <br /><br />Себелева Екатерина Алексеевна
+              <span class="light">#Designer</span>
             </p>
-            <a href="/site/about.html" class="btn">О проекте</a>
           </div>
           <div class="main__cover">
-            <img src="/site/images/1.png" alt="phone" />
+            <img src="/site/images/team.png" alt="team" />
           </div>
         </div>
       </div>
