--- a/site/team.html
+++ b/site/team.html
@@ -26,7 +26,7 @@
                 <a href="/site/index.html" class="nav__link">Главная</a>
                 <a href="/site/about.html" class="nav__link">О проекте</a>
                 <a href="/site/team.html" class="nav__link">Участники</a>
-                <a href="#" class="nav__link">Журнал</a>
+                <a href="/site/journal.html" class="nav__link">Журнал</a>
                 <a href="#" class="nav__link">Ресурсы</a>
               </nav>
             </div>
