--- a/site/index.html
+++ b/site/index.html
@@ -27,7 +27,7 @@
                 <a href="/site/about.html" class="nav__link">О проекте</a>
                 <a href="/site/team.html" class="nav__link">Участники</a>
                 <a href="/site/journal.html" class="nav__link">Журнал</a>
-                <a href="#" class="nav__link">Ресурсы</a>
+                <a href="/site/resources.html" class="nav__link">Ресурсы</a>
               </nav>
             </div>
           </div>
