Исправила ссылки на img и между страницами

--- a/site/about.html
+++ b/site/about.html
@@ -18,16 +18,16 @@
       <header>
         <div class="container">
           <div class="header">
-            <a href="/site/index.html" class="header__logo">
-              <img src="/site/images/Moscow-politech.svg" alt="logo" />
+            <a href="index.html" class="header__logo">
+              <img src="images/Moscow-politech.svg" alt="logo" />
             </a>
             <div class="header__nav">
               <nav class="nav">
-                <a href="/site/index.html" class="nav__link">Главная</a>
-                <a href="/site/about.html" class="nav__link">О проекте</a>
-                <a href="/site/team.html" class="nav__link">Участники</a>
-                <a href="/site/journal.html" class="nav__link">Журнал</a>
-                <a href="/site/resources.html" class="nav__link">Ресурсы</a>
+                <a href="index.html" class="nav__link">Главная</a>
+                <a href="about.html" class="nav__link">О проекте</a>
+                <a href="team.html" class="nav__link">Участники</a>
+                <a href="journal.html" class="nav__link">Журнал</a>
+                <a href="resources.html" class="nav__link">Ресурсы</a>
               </nav>
             </div>
           </div>
@@ -48,7 +48,7 @@
             </p>
           </div>
           <div class="main__cover">
-            <img src="/site/images/swift.png" alt="swift" />
+            <img src="images/swift.png" alt="swift" />
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
             </p>
           </div>
           <div class="main__cover">
-            <img src="/site/images/phone-2.png" alt="phone" />
+            <img src="images/phone-2.png" alt="phone" />
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
       <!--Задачи-->
       <div class="main__second">
         <h1 class="title-h1 main__title">Задачи</h1>
-        <img src="/site/images/tasks.png" alt="tasks" />
+        <img src="images/tasks.png" alt="tasks" />
       </div>
     </div>
     <div class="dark">
@@ -94,7 +94,7 @@
         <!--этапы реализации-->
         <div class="main">
           <div class="main__cover">
-            <img src="/site/images/dev.png" alt="dev" />
+            <img src="images/dev.png" alt="dev" />
           </div>
           <div class="main__text">
             <h1 class="title-h1 main__title white">Этапы реализации</h1>
@@ -113,7 +113,7 @@
       <!--карта приложения-->
       <div class="main__second">
         <h1 class="title-h1 main__title">Картра приложения</h1>
-        <img src="/site/images/map.png" alt="map" />
+        <img src="images/map.png" alt="map" />
       </div>
     </div>
     <div class="dark">
@@ -123,10 +123,10 @@
           <h1 class="title-h1 main__title white">Экраны</h1>
         </div>
         <div class="main third">
-          <img src="/site/images/auto.png" alt="auto" />
-          <img src="/site/images/shedule.png" alt="shedule" />
-          <img src="/site/images/ocenki.png" alt="ocenki" />
-          <img src="/site/images/profile.png" alt="profile" />
+          <img src="images/auto.png" alt="auto" />
+          <img src="images/shedule.png" alt="shedule" />
+          <img src="images/ocenki.png" alt="ocenki" />
+          <img src="images/profile.png" alt="profile" />
         </div>
       </div>
     </div>
@@ -149,8 +149,8 @@
       <footer>
         <div class="container">
           <div class="header">
-            <a href="/site/index.html" class="header__logo">
-              <img src="/site/images/Moscow-politech.svg" alt="logo" />
+            <a href="index.html" class="header__logo">
+              <img src="images/Moscow-politech.svg" alt="logo" />
             </a>
             <p class="contacts">
               Вольская Елизавета Сергеевна | Группа: 241-338
