--- a/site/index.html
+++ b/site/index.html
@@ -18,16 +18,16 @@
       <header>
         <div class="container">
           <div class="header">
-            <a href="/site/index.html" class="header__logo">
-              <img src="/site/images/Moscow-politech.svg" alt="logo" />
+            <a href="index.html" class="header__logo">
+              <img src="images/Moscow-politech.svg" alt="logo" />
             </a>
             <div class="header__nav">
               <nav class="nav">
-                <a href="/site/index.html" class="nav__link">Главная</a>
-                <a href="/site/about.html" class="nav__link">О проекте</a>
-                <a href="/site/team.html" class="nav__link">Участники</a>
-                <a href="/site/journal.html" class="nav__link">Журнал</a>
-                <a href="/site/resources.html" class="nav__link">Ресурсы</a>
+                <a href="index.html" class="nav__link">Главная</a>
+                <a href="about.html" class="nav__link">О проекте</a>
+                <a href="team.html" class="nav__link">Участники</a>
+                <a href="journal.html" class="nav__link">Журнал</a>
+                <a href="resources.html" class="nav__link">Ресурсы</a>
               </nav>
             </div>
           </div>
@@ -47,10 +47,10 @@
               241-338 <br />В рамках проектной деятельности «ИТ-сервисы для
               «Цифрового университета» (I курс)»
             </p>
-            <a href="/site/about.html" class="btn">О проекте</a>
+            <a href="\about.html" class="btn">О проекте</a>
           </div>
           <div class="main__cover">
-            <img src="/site/images/1.png" alt="phone" />
+            <img src="images/1.png" alt="phone" />
           </div>
         </div>
       </div>
@@ -59,8 +59,8 @@
       <footer>
         <div class="container">
           <div class="header">
-            <a href="/site/index.html" class="header__logo">
-              <img src="/site/images/Moscow-politech.svg" alt="logo" />
+            <a href="index.html" class="header__logo">
+              <img src="images/Moscow-politech.svg" alt="logo" />
             </a>
             <p class="contacts">
               Вольская Елизавета Сергеевна | Группа: 241-338
