Поправила ссылки в  "Ресурсы"

--- a/site/resources.html
+++ b/site/resources.html
@@ -18,16 +18,16 @@
       <header>
         <div class="container">
           <div class="header">
-            <a href="/site/index.html" class="header__logo">
-              <img src="/site/images/Moscow-politech.svg" alt="logo" />
+            <a href="index.html" class="header__logo">
+              <img src="images/Moscow-politech.svg" alt="logo" />
             </a>
             <div class="header__nav">
               <nav class="nav">
-                <a href="/site/index.html" class="nav__link">Главная</a>
-                <a href="/site/about.html" class="nav__link">О проекте</a>
-                <a href="/site/team.html" class="nav__link">Участники</a>
-                <a href="/site/journal.html" class="nav__link">Журнал</a>
-                <a href="/site/resources.html" class="nav__link">Ресурсы</a>
+                <a href="index.html" class="nav__link">Главная</a>
+                <a href="about.html" class="nav__link">О проекте</a>
+                <a href="team.html" class="nav__link">Участники</a>
+                <a href="journal.html" class="nav__link">Журнал</a>
+                <a href="resources.html" class="nav__link">Ресурсы</a>
               </nav>
             </div>
           </div>
@@ -98,7 +98,7 @@
             </ul>
           </div>
           <div class="main__cover">
-            <img src="/site/images/resources.png" alt="team" />
+            <img src="images/resources.png" alt="team" />
           </div>
         </div>
       </div>
@@ -107,8 +107,8 @@
       <footer>
         <div class="container">
           <div class="header">
-            <a href="/site/index.html" class="header__logo">
-              <img src="/site/images/Moscow-politech.svg" alt="logo" />
+            <a href="index.html" class="header__logo">
+              <img src="images/Moscow-politech.svg" alt="logo" />
             </a>
             <p class="contacts">
               Вольская Елизавета Сергеевна | Группа: 241-338
