Updates in index and resources

--- a/site/index.html
+++ b/site/index.html
@@ -47,7 +47,7 @@
               241-338 <br />В рамках проектной деятельности «ИТ-сервисы для
               «Цифрового университета» (I курс)»
             </p>
-            <a href="\about.html" class="btn">О проекте</a>
+            <a href="about.html" class="btn">О проекте</a>
           </div>
           <div class="main__cover">
             <img src="images/1.png" alt="phone" />
